# tomt

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/tomt/: __init__.py  cli.py
src/tomt/models/: __init__.py  post.py  song.py
src/tomt/scrapers/: __init__.py  reddit.py
src/tomt/services/: __init__.py  discovery.py  parser.py
src/tomt/storage/: __init__.py  database.py
src/tomt/web/: __init__.py  routes.py  schemas.py
src/tomt/web/templates/: index.html
tests/: __init__.py
